resolve browser-specific layout issues

--- a/src/styles/Game.module.css
+++ b/src/styles/Game.module.css
@@ -1,18 +1,6 @@
-.website {
-    height: 100%;
-    background-color: tan;
-    display: flex;
-    flex-direction: column;
-
-    overflow-y: auto;
-    /* hide scrollbar for IE, Edge and Firefox */
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-}
-
 .canvasContainer {
-    position: relative;
-    height: 100%;
+    flex: 1;
+    width: 100%;
     display: flex;
     flex-direction: column;
 }
