--- a/src/styles/TopBar.module.css
+++ b/src/styles/TopBar.module.css
@@ -1,5 +1,4 @@
 .topBarContainer {
-    height: 40px;
     background-color: cadetblue;
     width: 100vw;
     display: flex;
